2003-03-03  Ed Cogburn  <ecogburn@xtn.net>
* mzpokeysnd.c: Initialize some uninitialized variables to fix gcc warning

* devices.c, compfile.c: tmpnam() -> mkstemp() to fix gcc warning

* atari_sdl.c: control key support added (how it could be compiled before?)

* configure.ac: massive rewrite, new way of handling our options. Config
  summary added.

* Makefile.in: a number of small changes, and OBJ is changed to OBJS for
  consistancy within configure.ac

* atari.c, diskled.c, sio.c: diskled module is compiled in only if it's
  enabled in configure.


2003-02-27  Piotr Fusik  <fox@scene.pl>
* cartridge.[ch], ui.c, DOC/cart.txt, DOC/CREDITS, DOC/README:
  new cartridge type


2003-02-24  Ed Cogburn  <ecogburn@xtn.net>
* added copyright headers to all *.c and *.asm files. Tried to collect
  as much info as possible from the various ChangeLogs but if the author
  in the header is incorrect please don't hesitate to send me a correction.

* fixed all *.h files to use the same consistent format (#ifndef _FILE_H_ )

* reformatted DOC/CREDITS


2003-02-19  Ed Cogburn  <ecogburn@xtn.net>
* configure process: cleans up some things, fixes a few little things,
  rewrote the message screen when nothing is typed, and reorganizes/changes
  the --enable options and the symbol names (defines) for those options.

  First, all options are now --enable-xxx, because I flipped all the inverse
  options. In other words, all symbol names declared for options here in
  configure now mean the feature is enabled if the symbol is defined, for
  consistancy, and to make it easier to figure out what options need to be
  set. The display when you use '--help' also puts those features which
  default to on at the top of the list, so its easy to look down the list
  and understand whats going on now. 

  For those options that I flipped, I made the necessary fixes to the other
  source files, mainly changing #ifdef to #ifndef or vice-versa.